Issue #1358 fix: Side menu inside content preview has overflowing text

--- a/player/public/styles/style.css
+++ b/player/public/styles/style.css
@@ -323,7 +323,7 @@ body {
     display: -webkit-box;
     line-height: 1.6em;
     float: left;
-    top: 30%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
